--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,20 +18,20 @@
         }
         .card-row-1{
             display: flex;
-            justify-content: space-around;
-            padding: 40px;
+            justify-content: space-between;
+            padding: 10px;
             background-color: black;
         }
         .card-row-2{
             display: flex;
-            justify-content: space-around;
-            padding: 40px;
+            justify-content: space-between;
+            padding: 10px;
             background-color: black;
         }
         .card-row-3{
             display: flex;
-            justify-content: space-around;
-            padding: 40px;
+            justify-content: space-between;
+            padding: 10px;
             background-color: black;
         }
 
